--- a/index.html
+++ b/index.html
@@ -115,65 +115,66 @@ powered tools, and community insights to make informed market moves.
             <div class="skill1  reveal-up">
               <span class="skill-title1  reveal-up">Growth Strategist</span>
               <div class="progress-bar1  reveal-up">
-                <div class="progress-fill1  reveal-up" style="width:100%;background:linear-gradient(90deg,#f45353,#f60707);"></div>
+                <div class="progress-fill1  reveal-up" style="width:99%;background:linear-gradient(90deg,#f45353,#f60707);"></div>
               </div>
-              <span class="skill-percent1  reveal-up">100%</span>
+              <span class="skill-percent1  reveal-up">99.9%</span>
             </div>
             <div class="skill1  reveal-up">
               <span class="skill-title1  reveal-up">Community Building</span>
               <div class="progress-bar1  reveal-up">
-                <div class="progress-fill1  reveal-up" style="width:100%;background:linear-gradient(90deg,#f45353,#f60707);"></div>
+                <div class="progress-fill1  reveal-up" style="width:99%;background:linear-gradient(90deg,#f45353,#f60707);"></div>
               </div>
-              <span class="skill-percent1   reveal-up">100%</span>
+              <span class="skill-percent1   reveal-up">99.9%</span>
             </div>
+
               <div class="skill1  reveal-up">
               <span class="skill-title1  reveal-up">Campaign Execution</span>
              <div class="progress-bar1  reveal-up">
-                <div class="progress-fill1  reveal-up" style="width:100%;background:linear-gradient(90deg,#f45353,#f60707);"></div>
+                <div class="progress-fill1  reveal-up" style="width:99%;background:linear-gradient(90deg,#f45353,#f60707);"></div>
               </div>
-              <span class="skill-percent1  reveal-up">100%</span>
+              <span class="skill-percent1  reveal-up">99.9%</span>
             </div>
               <div class="skill1  reveal-up">
               <span class="skill-title1  reveal-up">Server Security</span>
                <div class="progress-bar1  reveal-up">
-                <div class="progress-fill1  reveal-up" style="width:100%;background:linear-gradient(90deg,#f45353,#f60707);"></div>
+                <div class="progress-fill1  reveal-up" style="width:99%;background:linear-gradient(90deg,#f45353,#f60707);"></div>
               </div>
-              <span class="skill-percent1  reveal-up">100%</span>
+              <span class="skill-percent1  reveal-up">99.9%</span>
             </div>
               <div class="skill1  reveal-up">
               <span class="skill-title1  reveal-up">Zealy & Airdrops Campaign</span>
            <div class="progress-bar1  reveal-up">
-                <div class="progress-fill1  reveal-up" style="width:100%;background:linear-gradient(90deg,#f45353,#f60707);"></div>
+                <div class="progress-fill1  reveal-up" style="width:99%;background:linear-gradient(90deg,#f45353,#f60707);"></div>
               </div>
-              <span class="skill-percent1  reveal-up">100%</span>
+              <span class="skill-percent1  reveal-up">99.9%</span>
             </div>
               <div class="skill1  reveal-up">
               <span class="skill-title1  reveal-up">Partnership Management</span>
              <div class="progress-bar1  reveal-up">
-                <div class="progress-fill1  reveal-up" style="width:100%;background:linear-gradient(90deg,#f45353,#f60707);"></div>
+                <div class="progress-fill1  reveal-up" style="width:99%;background:linear-gradient(90deg,#f45353,#f60707);"></div>
               </div>
-              <span class="skill-percent1  reveal-up">100%</span>
+              <span class="skill-percent1  reveal-up">99.9%</span>
             </div>
               <div class="skill1  reveal-up">
               <span class="skill-title1  reveal-up">Product Feedback</span>
              <div class="progress-bar1  reveal-up">
-                <div class="progress-fill1  reveal-up" style="width:100%;background:linear-gradient(90deg,#f45353,#f60707);"></div>
+                <div class="progress-fill1  reveal-up" style="width:99%;background:linear-gradient(90deg,#f45353,#f60707);"></div>
               </div>
-              <span class="skill-percent1  reveal-up">100%</span>
+              <span class="skill-percent1  reveal-up">99.9%</span>
             </div>
               <div class="skill1  reveal-up">
               <span class="skill-title1  reveal-up">Sprint and Gamified Onboarding </span>
              <div class="progress-bar1  reveal-up">
-                <div class="progress-fill1  reveal-up" style="width:100%;background:linear-gradient(90deg,#f45353,#f60707);"></div>
+                <div class="progress-fill1  reveal-up" style="width: 90%;background:linear-gradient(90deg,#f45353,#f60707);"></div>
               </div>
-              <span class="skill-percent1  reveal-up">100%</span>
+              <span class="skill-percent1  reveal-up">90%</span>
             </div>
               <div class="skill1  reveal-up">
               <span class="skill-title1  reveal-up">AMA Hosting</span>
                <div class="progress-bar1  reveal-up">
-               <div class="progress-fill1  reveal-up" style="width:100%;background:linear-gradient(90deg,#f45353,#f60707);"></div>
+               <div class="progress-fill1  reveal-up" style="width:80%;background:linear-gradient(90deg,#f45353,#f60707);"></div>
                </div>
-              <span class="skill-percent1  reveal-up">100%</span>
+              <span class="skill-percent1  reveal-up">80%</span>
             </div>
              </div>
         </div>
@@ -188,28 +189,28 @@ powered tools, and community insights to make informed market moves.
   <h2 class="key"> <span class="journey-dot1"></span>&nbsp; Key Projects</h2>
   <div class="project-lists3  reveal-up">
   <div class="project-card3  reveal-up">
-    <img src="WhatsApp Image 2025-07-30 at 22.59.38.jpeg" alt="Project logo" class="project-image3  reveal-up">
+    <a href="https://x.com/MysticMotorsApp" target="_blank"><img src="WhatsApp Image 2025-07-30 at 22.59.38.jpeg" alt="Project logo" class="project-image3  reveal-up"></a>
     <div class="project-details3  reveal-up">
       <h4>Mystic Motors</h4>
       <p>Secured partnerships; led pre/post-mint campaigns for NFT success.</p>
     </div>
   </div>
   <div class="project-card3  reveal-up">
-    <img src="WhatsApp Image 2025-07-30 at 23.00.10.jpeg" alt="Project logo" class="project-image3  reveal-up">
+    <a href="https://x.com/katanainu"  target="_blank"><img src="WhatsApp Image 2025-07-30 at 23.00.10.jpeg" alt="Project logo" class="project-image3  reveal-up"></a>
     <div class="project-details3  reveal-up">
       <h4>Katana Inu</h4>
       <p>Managed collabs with influencers, guilds; expanded gamer base.</p>
     </div>
   </div>
    <div class="project-card3  reveal-up">
-    <img src="WhatsApp Image 2025-07-30 at 23.00.42.jpeg" alt="Project logo" class="project-image3  reveal-up">
+    <a href="https://x.com/ethosx_finance" target="_blank"><img src="WhatsApp Image 2025-07-30 at 23.00.42.jpeg" alt="Project logo" class="project-image3  reveal-up"></a>
     <div class="project-details3  reveal-up">
       <h4>EthosX.Finance</h4>
       <p>Drove 30M+ volume with 400 traders; hosted live trading sessions.</p>
     </div>
 </div>
   <div class="project-card3  reveal-up">
-    <img src="WhatsApp Image 2025-07-30 at 23.01.15.jpeg" alt="Project logo" class="project-image3  reveal-up">
+    <a href="https://x.com/Curvance" target="_blank"><img src="WhatsApp Image 2025-07-30 at 23.01.15.jpeg" alt="Project logo" class="project-image3  reveal-up"></a>
     <div class="project-details3  reveal-up">
       <h4>Curvance</h4>
       <p>Managed partnerships; onboarded creators for pre-launch awareness.</p>
@@ -236,7 +237,7 @@ powered tools, and community insights to make informed market moves.
   <div class="footer-content">
     <span>© 2025 SKYREMEDY. All rights reserved.</span>
     <span class="powered-by">
-      Powered by 
+      Created by 
       <a href="https://x.com/Phavie100" target="_blank" rel="noopener" class="powered-link">
         Phavie
         <svg class="x-icon" xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" viewBox="0 0 1200 1227"><path d="M831 0H1079L684 521l430 705H898l-265-377-302 377H121L540 668 127 0h307l237 338zm-42 1103h117L371 121H253l536 982z"/></svg>
@@ -328,6 +329,20 @@ animateCount('projects-count', 1, 5, 2500);
       closeBtn.style.display = 'none';
     });
   });
+</script>
+<script>
+document.addEventListener('DOMContentLoaded', function () {
+  const cards = document.querySelectorAll('.track-card');
+  cards.forEach(card => {
+    card.addEventListener('touchstart', function () {
+      cards.forEach(c => c.classList.remove('hovered'));
+      card.classList.add('hovered');
+    });
+    card.addEventListener('touchend', function () {
+      setTimeout(() => card.classList.remove('hovered'), 300);
+    });
+  });
+});
 </script>
   
 </body>
