--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     </head>
 <body>
   <nav class="navbar  reveal-up">
@@ -107,7 +109,7 @@ powered tools, and community insights to make informed market moves.
             <p class="profile-title1">Community Manager & Growth Strategist</p>
             <div class="profile-icons1  reveal-up">
               <a href="https://x.com/Skyremedy" class="profile-icon1" target="_blank"><span>&#10006;</span></a>
-              <a href="mailto:skyremedy@gmail.com" class="profile-icon1"><span>&#9993;</span></a>
+              <a href="https://www.linkedin.com/in/skyremedy" class="profile-icon1" target="_blank">   <i class="fab fa-linkedin"></i></a>
             </div>
           </div>
           <div class="expertise-card1   reveal-up">
